CustomObjects/objects/invoiceit_s__Discount_Code__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>Holds the Discount corresponding to Product  Families and for a given validity.</description>
    <fields>
        <fullName>invoiceit_s__Apply_to__c</fullName>
        <label>Apply to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote/Order level</fullName>
                </value>
                <value>
                    <fullName>Charge level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Customer_Class__c</fullName>
        <description>Choose the customer class for whom this discount has to be applied to.</description>
        <inlineHelpText>Choose the customer class for whom this discount has to be applied to.</inlineHelpText>
        <label>Customer Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Type__c</fullName>
        <label>Price Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Valid_From__c</fullName>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Discount Code</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Apply_to__c</columns>
        <columns>invoiceit_s__Currency__c</columns>
        <columns>invoiceit_s__Product_Family__c</columns>
        <columns>invoiceit_s__Discount_Percent__c</columns>
        <columns>invoiceit_s__Discount_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Discount Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Both_discounts_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(invoiceit_s__Discount_Percent__c) &amp;&amp; ISBLANK(invoiceit_s__Discount_Value__c )</errorConditionFormula>
        <errorMessage>You should either enter a discount percentage or a discount value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Discount_percent_and_value</fullName>
        <active>true</active>
        <errorConditionFormula>invoiceit_s__Discount_Percent__c &gt; 0 &amp;&amp;  invoiceit_s__Discount_Value__c  &gt; 0</errorConditionFormula>
        <errorMessage>You can create a configuration with either a discount percentage or a discount value, but not both.</errorMessage>
    </validationRules>
</CustomObject>